fix: The subtitle should not change position when the alignment changes.

--- a/editor-components/intro-section/intro-section8/intro-section8.module.scss
+++ b/editor-components/intro-section/intro-section8/intro-section8.module.scss
@@ -117,12 +117,12 @@
                 align-items: center;
                 color: var(--composer-font-color-secondary);
                 background: var(--composer-primary-color);
-                padding: calc(var(--composer-gap-xs) * 3);
+                padding: var(--composer-gap-md);
                 border-radius: 50%;
 
                 .play-icon {
                     display: flex;
-                    font-size: 2.5rem;
+                    font-size: 2rem;
                 }
             }
         }
@@ -134,12 +134,6 @@
         .max-content {
             .media-wrapper {
                 height: auto;
-
-                .play-icon-wrapper {
-                    .play-icon {
-                        font-size: 2rem;
-                    }
-                }
             }
         }
     }
@@ -156,10 +150,10 @@
                 aspect-ratio: 16 / 22;
 
                 .play-icon-wrapper {
-                    padding: var(--composer-gap-sm);
+                    padding: calc(var(--composer-gap-xs) * 3);
 
                     .play-icon {
-                        font-size: 1.75rem;
+                        font-size: 1.5rem;
                     }
                 }
             }
